--- a/slider/slide06.html
+++ b/slider/slide06.html
@@ -52,7 +52,8 @@
 
         /* slide */
         .slider-wrap {
-            width: 1000px; height: 600px;
+            /* width: 1000px; height: 600px; */
+            width: 52.083vw; height: 31.250vw;
             overflow: hidden;
             position: absolute; left: 50%; top: 50%;
             transform: translate(-50%, -50%);
@@ -66,6 +67,7 @@
 
         .slider-img .slides{
             float: left;
+            width: 52.083vw;
         }
 
         .slider-btn a {
