--- a/slider/slide07.html
+++ b/slider/slide07.html
@@ -52,7 +52,8 @@
 
         /* slide */
         .slider-wrap {
-            width: 1200px;
+            /* width: 1200px; */ /* width: 62.500vw; */
+            /* width: 1500px; */ width: 78.125vw;
             overflow: hidden;
             position: absolute; left: 50%; top: 50%;
             transform: translate(-50%, -50%);
@@ -61,13 +62,16 @@
         .slider-img {
             overflow: hidden;
             position: relative;
-            width: 4200px;
+            /* width: 4200px; */ /* width: 218.750vw; */
+            /* width: 5200px; */ width: 270.833vw;
         }
 
         .slider-img .slides{
             float: left;
-            width: 400px;
-            padding: 10px;
+            /* width: 400px; */ /* width: 20.833vw; */
+            /* width: 500px; */ width: 26.042vw;
+            /* padding: 10px; */
+            padding: 0.521vw;
         }
 
         .slider-btn a {
