--- a/slider/slide08.html
+++ b/slider/slide08.html
@@ -52,7 +52,8 @@
 
         /* slide */
         .slider-wrap {
-            width: 1000px; height: 600px;
+            /* width: 1000px; height: 600px; */
+            width: 52.083vw; height: 31.250vw;
             overflow: hidden;
             position: absolute; left: 50%; top: 50%;
             transform: translate(-50%, -50%);
@@ -62,12 +63,15 @@
         .slider-img {
             overflow: hidden;
             position: relative;
-            width: 5000px;
+            /* width: 5000px; */
+            width: 260.417vw;
         }
 
         .slider-img .slides{
             position: relative;
             float: left;
+            /* width: 1000px; */
+            width: 52.083vw
         }
         .slider-img .slides span {
             position: absolute; left: 10px; top: 10px;
@@ -112,7 +116,6 @@
         <h1>Image Slider08</h1>
         <p>좌우로 움직이기</p>
         <ul>
-            <li>연속적으로 움직이기</li>
             <li>좌우 버튼 만들기</li>
             <li>닷 버튼 만들기</li>
         </ul>
