--- a/port/test3.html
+++ b/port/test3.html
@@ -38,7 +38,7 @@
             transform: translate(-50%, -50%) rotate3d(0.5, 0.9, 0.2, 50deg);
         }
         .show {
-            width: 100%;
+            width: 100vw;
             height: 100vh;
             background: rgba(182, 236, 4, 0.521);
             position: absolute; left: 0; top: 100%;
@@ -68,6 +68,7 @@
     <div class="show">
         <div class="close">close</div>
     </div>
+   
 
     <script src="../port/js/jquery.min_1.12.4.js"></script>
     <script>
