--- a/slider/slide03.html
+++ b/slider/slide03.html
@@ -52,7 +52,8 @@
 
         /* slide */
         .slider-wrap {
-            width: 1000px; height: 600px;
+            /* width: 1000px; height: 600px; */
+            width: 52.083vw; height: 31.250vw;
             overflow: hidden;
             position: absolute; left: 50%; top: 50%;
             transform: translate(-50%, -50%);
@@ -60,13 +61,15 @@
         }
 
         .slider-img {
-            width: 1000px; height: 3000px;
+            /* width: 1000px; height: 3000px; */
+            width: 52.083vw; height: 156.250vw;
             overflow: hidden;
             position: relative; 
         }
 
         .slider-img .slides{
-            width: 1000px;
+            /* width: 1000px; */
+            width: 52.083vw;
         }
     </style>
 </head>
@@ -134,7 +137,7 @@
 
             //삼항 연산자 ( 위의 if문을 한 번에 쓰는 것)
             currentIndex < 4 ? currentIndex++ : currentIndex = 0;
-            sliderImg.animate( {top: currentIndex * (-600) + "px"}, 400 );
+            sliderImg.animate( {top: currentIndex * (-31.250) + "vw"}, 400 );
 
         }, 3000);
        
