--- a/slider/slide04.html
+++ b/slider/slide04.html
@@ -52,7 +52,8 @@
 
         /* slide */
         .slider-wrap {
-            width: 1000px; height: 600px;
+            /* width: 1000px; height: 600px; */
+            width: 52.083vw; height: 31.250vw;
             overflow: hidden;
             position: absolute; left: 50%; top: 50%;
             transform: translate(-50%, -50%);
@@ -60,13 +61,16 @@
         }
 
         .slider-img {
-            width: 5000px; height: 600px;
+            /* width: 5000px; height: 600px; */
+            width: 260.417vw; height: 31.250vw;
             overflow: hidden;
             position: relative;
         }
 
         .slider-img .slides{
-            float: left; width: 1000px;
+            float: left; 
+            /* width: 1000px; */
+            width: 52.083vw
         }
     </style>
 </head>
@@ -114,7 +118,7 @@
 
        //3초에 한 번씩 실행
        setInterval(function(){
-           sliderImg.animate( {left: "-1000px"}, 400, function(){
+           sliderImg.animate( {left: "-52.083vw"}, 400, function(){
                $(".slides:first-child").appendTo(sliderImg);
                sliderImg.css("left","");
            } ); 
