--- a/port/index5.html
+++ b/port/index5.html
@@ -791,8 +791,31 @@
             </div>
         </section>
         <!-- //section6 -->
-        
 
+        <section id="section7">
+            <div class="container">
+                <div class="contact-title">
+                    <h2>let's talk</h2>
+                </div>
+                <div class="contact-content">
+                    <div class="question">
+                        Hello. What's your name?
+                    </div>
+                    <input type="text" placeholder="Name">
+                    <div class="question">
+                        How can I contact you?
+                    </div>
+                    <input type="text" placeholder="E-mail">
+                    <div class="question">
+                        Would you like to leave a message?
+                    </div>
+                    <input type="text" placeholder="Message">
+                </div>
+                <a class="contact-btn" href="#">SEND MESSAGE</a>
+                </div>
+            </div>
+        </section>
+        <!-- //section7 -->
     </div>
     
 
