--- a/port/index5.html
+++ b/port/index5.html
@@ -818,22 +818,25 @@
                 <div class="contact-title">
                     <h2>let's talk</h2>
                 </div>
-                <div class="contact-content">
-                    <div class="question">
-                        Hello. What's your name?
+                <form action="POST" action="https://formspree.io/dlwjswlgh@naver.com">
+                    <div class="contact-content">
+                        <div class="question">
+                            Hello. What's your name?
+                        </div>
+                        <input type="text" placeholder="Name">
+                        <div class="question">
+                            How can I contact you?
+                        </div>
+                        <input type="email" name="email" placeholder="E-mail">
+                        <div class="question">
+                            Would you like to leave a message?
+                        </div>
+                        <input type="text" placeholder="Message">
                     </div>
-                    <input type="text" placeholder="Name">
-                    <div class="question">
-                        How can I contact you?
+                    <!-- <a class="contact-btn" href="#">SEND MESSAGE</a> -->
+                    <input type="submit" value="SEND" class="contact-btn">
                     </div>
-                    <input type="text" placeholder="E-mail">
-                    <div class="question">
-                        Would you like to leave a message?
-                    </div>
-                    <input type="text" placeholder="Message">
-                </div>
-                <a class="contact-btn" href="#">SEND MESSAGE</a>
-                </div>
+                </form>
             </div>
         </section>
         <!-- //section7 -->
