--- a/port/index5.html
+++ b/port/index5.html
@@ -831,7 +831,7 @@
                         <div class="question">
                             Would you like to leave a message?
                         </div>
-                        <textarea name="message" placeholder="Message"></textarea>
+                        <textarea name="message" placeholder="Message, 포트폴리오용이므로 이메일 전송이 불가능합니다. 이력서의 연락처로 연락 부탁드립니다."></textarea>
                     </div>
                     <!-- <a class="contact-btn" href="#">SEND MESSAGE</a> -->
                     <!-- <input type="submit" value="SEND" class="contact-btn"> -->
