--- a/port/index5.html
+++ b/port/index5.html
@@ -818,7 +818,7 @@
                 <div class="contact-title">
                     <h2>let's talk</h2>
                 </div>
-                <form method="POST" action="https://formspree.io/dlwjswlgh@naver.com">
+                <form action="https://formspree.io/dlwjswlgh@naver.com" method="POST">
                     <div class="contact-content">
                         <div class="question">
                             Hello. What's your name?
