--- a/port/index5.html
+++ b/port/index5.html
@@ -818,24 +818,10 @@
                 <div class="contact-title">
                     <h2>let's talk</h2>
                 </div>
-                <form action="https://formspree.io/dlwjswlgh@naver.com" method="POST">
-                    <div class="contact-content">
-                        <div class="question">
-                            Hello. What's your name?
-                        </div>
-                        <input type="text" placeholder="Name">
-                        <div class="question">
-                            How can I contact you?
-                        </div>
-                        <input type="email" name="email" placeholder="E-mail">
-                        <div class="question">
-                            Would you like to leave a message?
-                        </div>
-                        <textarea name="message" placeholder="Message, 포트폴리오용이므로 이메일 전송이 불가능합니다. 이력서의 연락처로 연락 부탁드립니다."></textarea>
-                    </div>
-                    <!-- <a class="contact-btn" href="#">SEND MESSAGE</a> -->
-                    <!-- <input type="submit" value="SEND" class="contact-btn"> -->
-                    <button type="submit" class="contact-btn">SEND MESSAGE</button>
+                <form method="POST" action="https://formspree.io/dlwjswlgh@naver.com">
+                    <input type="email" name="email" placeholder="Your email">
+                    <textarea name="message" placeholder="Test Message"></textarea>
+                    <button type="submit">Send Test</button>
                 </form>
             </div>
         </section>
