--- a/port/index5.html
+++ b/port/index5.html
@@ -818,23 +818,23 @@
                 <div class="contact-title">
                     <h2>let's talk</h2>
                 </div>
-                <form method="POST" action="https://formspree.io/dlwjswlgh@naver.com">
-                    <div class="contact-content">
-                        <div class="question">
+                <div class="contact-content">
+                    <form method="POST" action="https://formspree.io/dlwjswlgh@naver.com">
+                        <label class="question">
                             Hello. What's your name?
-                        </div>
-                        <input type="text" placeholder="Name">
-                        <div class="question">
+                            <input type="text" placeholder="Name">
+                        </label>
+                        <label class="question">
                             How can I contact you?
-                        </div>
-                        <input type="email" name="email" placeholder="Your email">
-                        <div class="question">
+                            <input type="email" name="email" placeholder="Your email">
+                        </label>
+                        <label class="question">
                             Would you like to leave a message?
-                        </div>
-                        <textarea name="message" placeholder="Test Message"></textarea>
-                    </div>
-                    <button type="submit" class="contact-btn">Send Test</button>
-                </form>
+                            <textarea name="message" placeholder="Test Message"></textarea>
+                        </label>
+                        <button type="submit" class="contact-btn">Send Test</button>
+                    </form>
+                </div>
             </div>
         </section>
         <!-- //section7 -->
