--- a/port/index5.html
+++ b/port/index5.html
@@ -819,23 +819,11 @@
                     <h2>let's talk</h2>
                 </div>
                 <div class="contact-content">
-                    <form
-                    action="https://formspree.io/dlwjswlgh@naver.com"
-                    method="POST"
-                  >
-                    <label>
-                      Your Name:
-                      <input type="text" name="name">
-                    </label>
-                    <label>
-                      Your Email:
-                      <input type="email" name="_replyto">
-                    </label>
-                    <label>
-                      Message:
-                      <textarea name="message"></textarea>
-                    </label>
-                    <button type="submit" value="Send">send</button>
+                    <form action="https://formspree.io/dlwjswlgh@naver.com" method="POST">
+                        <input type="text" name="name">
+                        <input type="email" name="_replyto">
+                        <textarea name="message"></textarea>
+                        <button type="submit" value="Send" class="contact-btn">send</button>
                   </form>
                 </div>
             </div>
