--- a/port/index5.html
+++ b/port/index5.html
@@ -823,7 +823,7 @@
                         <input type="text" name="name">
                         <input type="email" name="_replyto">
                         <textarea name="message"></textarea>
-                        <button type="submit" value="Send" class="contact-btn">send</button>
+                        <button type="submit" value="Send">send</button>
                   </form>
                 </div>
             </div>
