--- a/port/index5.html
+++ b/port/index5.html
@@ -819,11 +819,16 @@
                     <h2>let's talk</h2>
                 </div>
                 <div class="contact-content">
+                    <div class="question-wrap">
+                        <p>Hello. What's your name?</p>
+                        <p>How can I contact you?</p>
+                        <p>Would you like to leave a message?</p>
+                    </div>
                     <form action="https://formspree.io/dlwjswlgh@naver.com" method="POST">
-                        <input type="text" name="name">
-                        <input type="email" name="_replyto">
-                        <textarea name="message"></textarea>
-                        <button type="submit" value="Send">send</button>
+                        <input type="text" name="name" placeholder="Name">
+                        <input type="email" name="_replyto" placeholder="E-mail">
+                        <input name="message" placeholder="Message"></textarea>
+                        <button type="submit" value="Send">SEND MESSAGE</button>
                   </form>
                 </div>
             </div>
