--- a/port/index5.html
+++ b/port/index5.html
@@ -707,16 +707,17 @@
                 
                 <div class="script-top parallax">
                     <div class="script-txt-wrap stw1">
-                        <h2 class="script-title">parallax</h2>
-                        <p class="script-what">what</p>
+                        <h2 class="script-title"><span>parallax</span></h2>
+                        <p class="script-what"><span>what</span></p>
                         <p class="script-desc">
-                            Parallax는 ‘시차’ 라는 뜻으로 천문학에서 사용하는 용어입니다. 즉 멀리 있는 물체는 천천히 움직이고, 가까이 있는 물체는 빨리 움직이는 현상을 의미하며, 이 현상을 이용하면 입체감, 실체감을 높여서 보다 인상적인 디자인을 할 수 있습니다.
+                            <span>Parallax는 ‘시차’ 라는 뜻으로 천문학에서 사용하는 용어입니다. 즉 멀리 있는 물체는 천천히 움직이고, 가까이 있는 물체는 빨리 움직이는 현상을 의미하며, 이 현상을 이용하면 입체감, 실체감을 높여서 보다 인상적인 디자인을 할 수 있습니다.</span>
                         </p>
                     </div>
                     <div class="scriptimg-wrap">
                         <div class="img-box">
                             <img src="img/parallax.jpg" alt="패럴랙스 스크립트">
                         </div>
+                        <span class='pulse-button'>click</span>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
@@ -742,16 +743,17 @@
                
                 <div class="script-top slide">
                     <div class="script-txt-wrap stw2">
-                        <h2 class="script-title">image slide</h2>
-                        <p class="script-what">what</p>
+                        <h2 class="script-title"><span>image slide</span></h2>
+                        <p class="script-what"><span>what</span></p>
                         <p class="script-desc">
-                            Image Slide는 웹 사이트에서 자주 사용되는 스크립트이며, slide의 ‘미끄러지다’ 라는 뜻 처럼 고정된 이미지를 미끄러지게 하여 웹 사이트에 생동감을 주며, 사용자에게 쉽게 정보를 제공할 수 있습니다.
+                            <span>Image Slide는 웹 사이트에서 자주 사용되는 스크립트이며, slide의 ‘미끄러지다’ 라는 뜻 처럼 고정된 이미지를 미끄러지게 하여 웹 사이트에 생동감을 주며, 사용자에게 쉽게 정보를 제공할 수 있습니다.</span>
                         </p>
                     </div>
                     <div class="scriptimg-wrap">
                         <div class="img-box">
                             <img src="img/slide.jpg" alt="슬라이드 스크립트">
                         </div>
+                        <span class='pulse-button'>click</span>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
@@ -777,16 +779,17 @@
 
                 <div class="script-top mouse">
                     <div class="script-txt-wrap stw3">
-                        <h2 class="script-title">mouse</h2>
-                        <p class="script-what">what</p>
+                        <h2 class="script-title"><span>mouse</span></h2>
+                        <p class="script-what"><span>what</span></p>
                         <p class="script-desc">
-                            Interaction은 사용자와 서비스간의 상호작용을 뜻하며, Mouse는 상호작용을 위한 중요한 수단입니다. Mouse에 다양한 효과를 주게 되면 컨텐츠에 대한 집중을 높일 수 있습니다.
+                            <span>Interaction은 사용자와 서비스간의 상호작용을 뜻하며, Mouse는 상호작용을 위한 중요한 수단입니다. Mouse에 다양한 효과를 주게 되면 컨텐츠에 대한 집중을 높일 수 있습니다.</span>
                         </p>
                     </div>
                     <div class="scriptimg-wrap">
                         <div class="img-box">
                             <img src="img/mouse.jpg" alt="마우스 스크립트">
                         </div>
+                        <span class='pulse-button'>click</span>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
