--- a/port/index5.html
+++ b/port/index5.html
@@ -717,7 +717,7 @@
                         <div class="img-box">
                             <img src="img/parallax.jpg" alt="패럴랙스 스크립트">
                         </div>
-                        <span class='pulse-button'>click</span>
+                        <a class="btn-6" href="#"><strong>click</strong><span></span></a>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
