--- a/port/index5.html
+++ b/port/index5.html
@@ -717,7 +717,7 @@
                         <div class="img-box">
                             <img src="img/parallax.jpg" alt="패럴랙스 스크립트">
                         </div>
-                        <a class="btn-6" href="#"><strong>click</strong><span></span></a>
+                        <span>click</span>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
@@ -753,7 +753,7 @@
                         <div class="img-box">
                             <img src="img/slide.jpg" alt="슬라이드 스크립트">
                         </div>
-                        <span class='pulse-button'>click</span>
+                        <span>click</span>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
@@ -789,7 +789,7 @@
                         <div class="img-box">
                             <img src="img/mouse.jpg" alt="마우스 스크립트">
                         </div>
-                        <span class='pulse-button'>click</span>
+                        <span>click</span>
                     </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
