--- a/port/index5.html
+++ b/port/index5.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="font/font.css">
 </head>
 <body> 
-    
-    
     <div class="info">
         <span class="scrollTop">0</span>
     </div>
@@ -818,21 +816,19 @@
 
         <section id="section7">
             <div class="container">
-                <div class="contact-title">
-                    <h2>let's talk</h2>
-                </div>
-                <div class="contact-content">
-                    <div class="question-wrap">
-                        <p>Hello. What's your name?</p>
-                        <p>How can I contact you?</p>
-                        <p>Would you like to leave a message?</p>
+                <div class="contact-wrap">
+                    <div class="contact-title">
+                        <h2>how to contact me</h2>
+                        <p class="sub-tit">Thinking= Thinking + Thinking</p>
                     </div>
-                    <form action="https://formspree.io/dlwjswlgh@naver.com" method="POST">
-                        <input type="text" name="name" placeholder="Name">
-                        <input type="email" name="_replyto" placeholder="E-mail">
-                        <input name="message" placeholder="Message"></textarea>
-                        <button type="submit" value="Send">SEND MESSAGE</button>
-                  </form>
+                    <div class="contact-content">
+                        <form action="https://formspree.io/dlwjswlgh@naver.com" method="POST">
+                            <input type="text" name="name" placeholder="Name">
+                            <input type="email" name="_replyto" placeholder="E-mail">
+                            <input name="message" placeholder="Message"></textarea>
+                            <button type="submit" value="Send">SEND MESSAGE</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
