--- a/port/index5.html
+++ b/port/index5.html
@@ -818,6 +818,7 @@
             <div class="container">
                 <div class="contact-wrap">
                     <div class="contact-title">
+                        <h2>thank you</h2>
                         <h2>how to contact me</h2>
                         <p class="sub-tit">Thinking= Thinking + Thinking</p>
                     </div>
