--- a/port/index5.html
+++ b/port/index5.html
@@ -814,6 +814,7 @@
         <!-- //section6 -->
 
         <section id="section7">
+            <span></span>
             <div class="container">
                 <div class="contact-wrap">
                     <div class="contact-title">
