--- a/port/index5.html
+++ b/port/index5.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="font/font.css">
 </head>
 <body> 
-    <div class="info">
+    <!-- <div class="info">
         <span class="scrollTop">0</span>
-    </div>
+    </div> -->
     <!-- //cursor -->
     <div id="contents">
         <header id="header">
